fixed spacing on multiple specials on business show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,6 +101,10 @@
   color: red;
 }
 
+.small-screen-margin {
+  padding-top: 10px;
+}
+
 /* User sign in and sign forms. */
 .border-form-div {
   max-width: 300px;
